infrastructure/clusters/home/apps/components/popcorn-society/serve/security-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: imdb-clone-security-headers
  namespace: imdb-clone
spec:
  headers:
    contentSecurityPolicy: "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; frame-src 'self' https://www.youtube-nocookie.com; form-action 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://object-storage.imdb-clone.the-coding-lab.com; font-src 'self' data:; connect-src 'self' https://popcornsociety.app wss://popcornsociety.app https://imdb-clone.the-coding-lab.com wss://imdb-clone.the-coding-lab.com https://backend.imd [...]
