infrastructure/clusters/home/apps/components/popcorn-society/serve/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb-clone-agent
  namespace: imdb-clone
spec:
  template:
    spec:
      containers:
        - name: agent
