infrastructure/clusters/home/apps/components/popcorn-society/serve/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb-clone-backend
  namespace: imdb-clone
spec:
  template:
    spec:
      containers:
        - name: backend
